Fix the metrics URL